Fix Safari bug where bleed images didn’t display due to height issue

--- a/prototype/assets/sass/components/_bleed-image.scss
+++ b/prototype/assets/sass/components/_bleed-image.scss
@@ -5,13 +5,13 @@
 .bleed-image {
     width:  100%;
     height: 100%;
-
     background: transparent none no-repeat center center/cover;
 }
 
 .bleed-image__image {
-    height: rem(10);
-    width:  rem(10);
-
-    opacity: 0.000001;
+	@include mq($from: medium) {
+	    height: rem(10);
+	    width:  rem(10);
+	    opacity: 0.000001;
+	}
 }
